--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Admin</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='admin_dashboard_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin_dashboard_style.css', v='1.1') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -27,15 +27,17 @@
 
         <main class="main-content">
             <header class="top-bar">
-                <div class="welcome-text">Halo, Admin!</div>
+                <div class="welcome-text">Selamat datang Admin!</div>
                 <div class="header-right">
                     <div class="search-box">
                         <i class="fas fa-search"></i>
                         <input type="text" placeholder="Type here...">
                     </div>
-                    <div class="user-profile">
-                        <i class="fas fa-user-circle"></i>
-                        <span class="username">{{ session.get('username', 'Admin') }}</span>
+                    {% if 'user_id' in session %}
+                        <a href="{{ url_for('logout') }}" style="color: #666;"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    {% else %}
+                        <a href="{{ url_for('login') }}" style="color: #666;"><i class="fas fa-user-circle"></i> Sign In</a>
+                    {% endif %}
                 </div>
             </header>
             
@@ -88,7 +90,7 @@
                         <span class="title">Pemesanan Bulan Ini</span>
                         <div class="icon-box bg-orange"><i class="fas fa-chart-bar"></i></div>
                     </div>
-                    <div class="value">Rp 103,430</div>
+                    <div class="value">Rp {{ "{:,.0f}".format(this_month_sales) }}</div>
                     <div class="summary-card-footer">
                         <span class="change-percent positive">+9%</span>
                         <span>than last month</span>
@@ -152,7 +154,7 @@
                             <tr>
                                 <td>{{ flight.origin }} - {{ flight.destination }}</td>
                                 <td>{{ flight.tickets_booked }}</td>
-                                <td>Rp {{ "{:,.0f}".format(flight.tickets_booked * 1000000) }}</td>
+                                <td>Rp {{ "{:,.0f}".format(flight.tickets_booked * flight.price) }}</td>
                                 <td>-</td>
                             </tr>
                             {% endfor %}
